@@ -2178,6 +2178,7 @@ return [
 			'CategoryCollation' => 'uppercase',
 			'TempCategoryCollations' => [
 			],
+			'SortedCategories' => false,
 			'TrackingCategories' => [
 			],
 			'LogTypes' => [
@@ -2947,6 +2948,7 @@ return [
 			'SpecialPageCacheUpdates' => 'object',
 			'PagePropLinkInvalidations' => 'object',
 			'TempCategoryCollations' => 'array',
+			'SortedCategories' => 'boolean',
 			'TrackingCategories' => 'array',
 			'LogTypes' => 'array',
 			'LogRestrictions' => 'object',
